@@ -3,6 +3,7 @@ package org.tkit.document.management.rs.v1;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import javax.annotation.Priority;
 import javax.ws.rs.WebApplicationException;
@@ -73,7 +74,7 @@ public class ExceptionToRFCProblemMapper implements ExceptionMapper<Exception> {
                 ? daoException.getCause().getCause().getMessage()
                 : null;
 
-        RFCProblemDTO rfcProblemDTO = RFCProblemDTO.builder()
+        var rfcProblemDTO = RFCProblemDTO.builder()
                 .type(RFCProblemType.DAO_EXCEPTION.name())
                 .title(TECHNICAL_ERROR)
                 .status(Response.Status.INTERNAL_SERVER_ERROR.getStatusCode())
@@ -95,7 +96,7 @@ public class ExceptionToRFCProblemMapper implements ExceptionMapper<Exception> {
      * @return the corresponding {@link Response}
      */
     private Response createResponse(RestException restException) {
-        RFCProblemDTO rfcProblemDTO = RFCProblemDTO.builder()
+        var rfcProblemDTO = RFCProblemDTO.builder()
                 .type(RFCProblemType.REST_EXCEPTION.name())
                 .title(TECHNICAL_ERROR)
                 .status(restException.getStatus().getStatusCode())
@@ -116,11 +117,11 @@ public class ExceptionToRFCProblemMapper implements ExceptionMapper<Exception> {
         }
         return Arrays.stream(cause.getStackTrace())
                 .map(this::mapStackTraceElement)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private RFCProblemDetailDTO mapStackTraceElement(StackTraceElement stackTraceElement) {
-        RFCProblemDetailDTO problemDetail = new RFCProblemDetailDTO();
+        var problemDetail = new RFCProblemDetailDTO();
         problemDetail.setMessage(
                 "An error occured in " + stackTraceElement.getMethodName() + " at line "
                         + stackTraceElement.getLineNumber());
@@ -136,7 +137,7 @@ public class ExceptionToRFCProblemMapper implements ExceptionMapper<Exception> {
      * @return the corresponding {@link Response}
      */
     private Response createResponse(WebApplicationException webApplicationException) {
-        RFCProblemDTO rfcProblemDTO = RFCProblemDTO.builder()
+        var rfcProblemDTO = RFCProblemDTO.builder()
                 .type(RFCProblemType.WEB_APPLICATION_EXCEPTION.name())
                 .title(TECHNICAL_ERROR)
                 .status(webApplicationException.getResponse().getStatus())
@@ -158,7 +159,7 @@ public class ExceptionToRFCProblemMapper implements ExceptionMapper<Exception> {
      * @return the corresponding {@link Response}
      */
     private Response createResponse(Exception exception) {
-        RFCProblemDTO rfcProblemDTO = RFCProblemDTO.builder()
+        var rfcProblemDTO = RFCProblemDTO.builder()
                 .type(Response.Status.INTERNAL_SERVER_ERROR.name())
                 .title(TECHNICAL_ERROR)
                 .status(Response.Status.INTERNAL_SERVER_ERROR.getStatusCode())
