@@ -3,6 +3,7 @@ package org.tkit.document.management.rs.v1;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import javax.annotation.Priority;
 import javax.validation.ValidationException;
@@ -56,7 +57,7 @@ public class ValidationExceptionToRFCProblemMapper implements ExceptionMapper<Va
      * @return the corresponding {@link Response}
      */
     private Response createResponse(ValidationException validationException) {
-        RFCProblemDTO rfcProblemDTO = RFCProblemDTO.builder()
+        var rfcProblemDTO = RFCProblemDTO.builder()
                 .type(RFCProblemType.VALIDATION_EXCEPTION.name())
                 .title(TECHNICAL_ERROR)
                 .status(Response.Status.BAD_REQUEST.getStatusCode())
@@ -77,11 +78,11 @@ public class ValidationExceptionToRFCProblemMapper implements ExceptionMapper<Va
         }
         return Arrays.stream(cause.getStackTrace())
                 .map(this::mapStackTraceElement)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private RFCProblemDetailDTO mapStackTraceElement(StackTraceElement stackTraceElement) {
-        RFCProblemDetailDTO problemDetail = new RFCProblemDetailDTO();
+        var problemDetail = new RFCProblemDetailDTO();
         problemDetail.setMessage(
                 "An error occured in " + stackTraceElement.getMethodName() + " at line "
                         + stackTraceElement.getLineNumber());
